[package]
name = "rustore"
version = "0.1.0"
authors = ["Giuseppe Papallo <giuseppe@papallo.it>"]
edition = "2018"
description = "A simple content addressable blob store."
readme = "README.md"
repository = "https://github.com/giuppep/rustore"
license-file = "LICENCE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.3"
clap = "2.33.0"
actix-web = "3"
actix-multipart = "0.3.0"
futures = "0.3.1"
sanitize-filename = "0.3.0"
serde = "1.0.125"
serde_json = "1.0.64"
infer =  "0.5.0"
tempfile = "3"
ignore = "0.4"
env_logger= "0.8.3"
log = "0.4.14"
chrono = "0.4.19"
indicatif = {version = "0.16.2", features = ["rayon"]}
rayon = "1.5.1"
regex = "1.5.4"
lazy_static = "1.4.0"