[package]
name = "rustore"
version = "0.1.0"
authors = ["Giuseppe Papallo <giuseppe@papallo.it>"]
edition = "2018"
description = "A simple content addressable blob store."
readme = "README.md"
repository = "https://github.com/giuppep/rustore"
license-file = "LICENSE"
categories = ["filesystem"]
keywords = ["blob-store"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lib dependencies
sha2 = "0.9.3"
tree_magic_mini = "3.0.0"
tempfile = "3"
ignore = "0.4"
chrono = "0.4.19"
indicatif = "0.16.2"
regex = "1.5.4"
lazy_static = "1.4.0"
# bin dependencies
clap = "2.33.0"
actix-web = "3"
actix-multipart = "0.3.0"
actix-service = "1"
actix-rt = "2.2.0"
futures = "0.3.1"
sanitize-filename = "0.3.0"
env_logger = "0.8.3"
log = { version="0.4.14", features=["serde"] }
uuid = { version="0.8", features=["v4"] }
directories = "3.0.2"
serde = { version="1.0.126", features=["derive"] }
toml = "0.5.8"
