[package]
name = "rstr_server"
version = "0.1.0"
authors = ["Giuseppe Papallo <giuseppe@papallo.it>"]
edition = "2018"
description = "A simple content addressable blob store with a web interface."
readme = "README.md"
repository = "https://github.com/giuppep/rstr"
license = "MIT"
categories = ["filesystem"]
keywords = ["blob-store"]

[[bin]]
name = "rstr"
path = "src/main.rs"

[dependencies]
rstr = { version = "0.1.0", path = "../rstr", features = ["progress_bar"] }
tempfile = "3"
clap = "2.33.0"
actix-web = "3"
actix-multipart = "0.3.0"
actix-rt = "2.5.0"
futures = "0.3.19"
sanitize-filename = "0.3.0"
env_logger = "0.9.0"
log = { version = "0.4.14", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
directories = "4.0.1"
serde = { version = "1.0.130", features = ["derive"] }
toml = "0.5.8"

[package.metadata.deb]
name = "rstr"
extended-description = """\
rstr is a simple content-addressable blob store with a web interface.
"""
section = "utility"
